<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BWARG (Master)</string>
    <string name="settings">Settings</string>
    <string name="image_settings">Image Settings</string>
    <string name="resolution_times"> x </string>
    <string name="resolution_label">Resolution</string>
    <string name="camera">Camera</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="general">General</string>
    <string-array name="resolution_array">
        <item>640x480</item>
        <item>480x640</item>
        <item>320x240</item>
        <item>240x320</item>
        <item>176x144</item>
        <item>144x176</item>
        <item>Custom</item>
    </string-array>

    <string name="ip_setting_label">Address</string>
    <string name="port_setting_label">Port</string>
    <string name="command_setting_label">Command</string>
    <string name="connected_to">Connected to </string>
    <string name="digits_increment">+</string>
    <string name="digits_decrement">-</string>
    <string name="address_dot">.</string>
    <string name="port_80">80</string>
    <string name="port_8080">8080</string>
    <string name="port_80_with_explanation">80 (for Ai-ball)</string>
    <string name="port_8080_with_explanation">8080 (for IP Webcam)</string>
    <string name="command_streaming">\?action=stream</string>
    <string name="command_videofeed">videofeed</string>
    <string name="command_streaming_with_explanation">\?action=stream (for Ai-ball)</string>
    <string name="command_videofeed_with_explanation">videofeed (for IP Webcam)</string>

    <string name="settings_done">Done</string>

    <string name="title_disconnected">Disconnected</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_imageerror">Error on preparing images</string>
    <string name="title_activity_general_settings">GeneralSettingsActivity</string>

    <string name="title_settings_left">Left Stream</string>
    <string name="title_settings_right">Right Stream</string>
    <string name="title_settings_general">General Settings</string>
    <string name="title_settings_discover_udp">LAN Discover</string>
    <string name="stream_settings_label">Open stream settings</string>
    <string name="compression_method_label">Compression Method (soon)</string>
    <string name="jpeg_label">JPEG (bigger files, faster enc/dec)</string>
    <string name="bgp_label">BGP (smaller files, slower enc/dec)</string>
    <string name="interface_label">Interface</string>
    <string name="show_fps_label">Show FPS counter</string>
    <string name="show_status_label">Show camera status</string>
    <string name="network_discovery">Network Scan</string>
    <string name="no_port_label">No port</string>
    <string name="image_settings_label">Image settings</string>
    <string name="verbose_mode_label">Verbose mode</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="key_device_name">device_name</string>
    <string name="action_settings">Settings</string>
    <string name="resolution_spinner_label">Resolution : </string>
    <string name="camera_label">Camera</string>
    <string name="flash_light_label">Flash</string>
    <string name="use_flash_label">Use flash</string>
    <string name="server_port_label">Server Port</string>
    <string name="server_name_label">Server Name</string>
    <string name="quality_label">Quality</string>
    <string name="image_label">Image</string>
    <string name="camera_0_back">Back (Camera 0)</string>
    <string name="camera_1_front">Front (Camera 1)</string>
    <string name="lock_keys_checkbox">Lock physical buttons (experimental)</string>
    <string name="image">Image</string>
    <string name="open_image_settings">Open image settings</string>
    <string name="capture_label">Capture</string>
    <string name="white_balance">White balance</string>
    <string name="auto_white_balance_lock">Auto white balance lock</string>
    <string name="exposure_label">Exposure</string>
    <string name="focus_mode_label">Focus mode</string>
    <string name="iso_label">ISO</string>
    <string name="extras_label">Extras</string>
    <string name="image_stabilization_checkBox">Stabilize image</string>
    <string name="auto_exposure_lock">Auto exposure lock</string>
    <string name="mode_label">Mode : </string>
    <string name="fast_fps_mode_checkbox">Fast FPS mode (recommended)</string>
</resources>