<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/custom_divider"
        android:showDividers="middle"
        android:dividerPadding="22dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stream_settings_label"
            android:layout_margin="10dp"
            android:singleLine="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:id="@+id/left_button"
                android:layout_gravity="center_horizontal"
                android:onClick="openSettingsLeft" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:id="@+id/right_button"
                android:layout_gravity="center_horizontal"
                android:onClick="openSettingsRight" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compression_method_label"
            android:layout_margin="10dp"
            android:visibility="gone" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginLeft="20dp"
            android:visibility="gone">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpeg_label"
                android:id="@+id/radioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bgp_label"
                android:id="@+id/radioButton2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_label"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginLeft="20dp">

            <!-- address1 -->

            <!-- address2 -->

            <!-- address3 -->

            <!-- address4 -->


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_fps_label"
                android:id="@+id/checkBox_fps"
                android:onClick="onCheckboxClicked" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_status_label"
                android:id="@+id/checkBox_log"
                android:onClick="onCheckboxClicked" />
        </LinearLayout>

        <Button android:id="@+id/general_settings_done"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_done"
            android:layout_margin="30dp" />


    </LinearLayout>
</ScrollView>
