<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_label"
                android:layout_margin="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView.SpinnerItem"
                    android:text="@string/resolution_spinner_label"
                    android:id="@+id/textView12"
                    android:textColor="#000000"
                    android:layout_marginLeft="5dp" />

                <Spinner
                    android:id="@+id/resolution_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_label"
                android:layout_margin="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="1%"
                    android:id="@+id/quality_text"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="right"
                    android:textSize="@dimen/abc_text_size_menu_material" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/quality_seekbar"
                    android:max="99"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="30dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/white_balance_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_balance"
                    android:layout_margin="10dp"
                    android:id="@+id/textView5" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_white_balance_lock"
                    android:id="@+id/auto_white_lock"
                    android:layout_marginLeft="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView.SpinnerItem"
                        android:text="@string/mode_label"
                        android:id="@+id/textView"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <Spinner
                        android:id="@+id/white_balance_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/exposure_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exposure_label"
                    android:layout_margin="10dp"
                    android:id="@+id/textView6" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_exposure_lock"
                    android:id="@+id/auto_exposure_lock"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/iso_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iso_label"
                    android:layout_margin="10dp"
                    android:id="@+id/textView7" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView.SpinnerItem"
                        android:text="@string/mode_label"
                        android:id="@+id/textView10"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <Spinner
                        android:id="@+id/iso_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/focus_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/focus_mode_label"
                    android:layout_margin="10dp"
                    android:id="@+id/textView8" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView.SpinnerItem"
                        android:text="@string/mode_label"
                        android:id="@+id/textView11"
                        android:textColor="#000000"
                        android:layout_marginLeft="5dp" />

                    <Spinner
                        android:id="@+id/focus_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/extras_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extras_label"
                    android:layout_margin="10dp"
                    android:id="@+id/textView9" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_stabilization_checkBox"
                    android:id="@+id/image_stabilization"
                    android:layout_marginLeft="20dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_fps_mode_checkbox"
                    android:id="@+id/fast_fps_checkbox"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/settings_done"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_done"
                android:layout_margin="30dp" />
        </LinearLayout>
</ScrollView>